--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
 .ace-tool/
+
+# OS / IDE
+.DS_Store
+.idea/
+*.iml
+.vscode/
+
+# Logs
+*.log
+
+# Backend (Maven)
+backend/target/
+backend/.jqwik-database
+
+# Frontend (Node)
+frontend/node_modules/
+frontend/dist/
+
+# Env files (keep .env.example if you add one later)
+.env
+.env.*
