feat: add MySQL RBAC CRUD

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -62,10 +62,14 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
 
-        <!-- Persistence (to be enabled by removing DataSourceAutoConfiguration exclude in application.yml) -->
+        <!-- Persistence -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-jsqlparser</artifactId>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
@@ -123,6 +127,11 @@
             <version>${jqwik.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -134,4 +143,3 @@
         </plugins>
     </build>
 </project>
-
