feat: file & notification modules
- add sys_file storage + public/private download\n- add notifications + websocket auth/init push\n- expand backend test matrix

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -18,7 +18,8 @@ app:
     access-token-ttl-seconds: 86400
     refresh-token-ttl-seconds: 2592000
   file:
-    storage-path: ${FILE_STORAGE_PATH:./data/files}
+    # Default to ./storage when running from backend/ (maps to backend/storage/)
+    storage-path: ${FILE_STORAGE_PATH:./storage}
 
 springdoc:
   swagger-ui:
